--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.0",
     "react-slick": "^0.30.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
